--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="AI로 당신의 동물상과 닮은꼴을 찾아보세요! 재미있는 얼굴 분석 서비스"
     />
+    <meta name="google-adsense-account" content="ca-pub-8701634541908469">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>AI 닮은꼴 찾기 - 동물상 & 브레인롯 분석</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
