feat: 네이버 및 구글 사이트 검증 메타태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="AI로 당신의 동물상과 닮은꼴을 찾아보세요! 재미있는 얼굴 분석 서비스"
     />
     <meta name="google-adsense-account" content="ca-pub-4188565136456754">
+    <meta name="naver-site-verification" content="18c8652be81cbb145113b948adf97a6650da6474" />
+    <meta name="google-site-verification" content="FGPM-j1ItMhV5B43t4oMCJCd6PwEi8fTxjOqyeU19ko" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>AI 닮은꼴 찾기 - 동물상 & 브레인롯 분석</title>
